typescript/checker/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode10.ts.stderr
error: 'eval' and 'arguments' cannot be used as a binding identifier in string mode
 --> $DIR/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode10.ts:2:12
  |
2 | function f(eval) {
  |            ^^^^

